# ascii-game

./: Cargo.toml
client/: Cargo.toml
client/src/: app.rs  main.rs
client/src/renderer/: drawer.rs  event.rs  mod.rs
client/src/renderer/curses/: mod.rs
client/src/renderer/glium/: mod.rs
client/src/renderer/opengl/: context.rs  mod.rs
client/src/ui/: menu_state.rs  mod.rs
client/src/util/: fps.rs  rect.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: actors.rs  events.rs  lib.rs  manifest_load.rs  shared_behaviour.rs  shared_config.rs
shared/src/actors/: chat.rs  mod.rs  point_actor.rs  world_actor.rs
shared/src/events/: auth_event.rs  chat_event.rs  key_command.rs  mod.rs
shared/src/game/: map.rs
src/: main.rs
src/game/: map.rs
src/renderer/: drawer.rs  mod.rs
src/renderer/curses/: mod.rs
src/util/: mod.rs  rect.rs
