[package]
name = "ascii-game"
version = "0.0.1"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

[[bin]]
name = "asci-game-client"
path = "src/main.rs"

[features]
multithread = [ "naia-client/multithread" ]

[dependencies]
cfg-if = "0.1.10"
rand = "0.8.1"
log = "0.4"
simple_logger = { version = "1.4" }
bitflags = "1.2.1"
num-integer = "0.1"

naia-client = { version = "0.5.0", features = [ "mquad" ] }
ascii-game-shared = { path = "../shared" }

glium = "*"

[dependencies.pancurses]
version = "0.16"