[package]
name = "ascii-game-server"
version = "0.0.1"
edition = "2018"

[features]
use-udp = [ "naia-server/use-udp" ]

[dependencies]
naia-server = { version = "0.5.0" }
ascii-game-shared = { path = "../shared" }
log = "0.4"
rand = "0.8.1"
simple_logger = { version = "1.4" }
smol = { version = "1.2.4" }